infrastructure/routing/traefik-config/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: routing
spec:
  entryPoints:
    - wss-internal
  routes:
    - match: Host(`traefik.thehutchery.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-tls
